--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,18 +1,39 @@
-import math #подключение библиотеки математических функций1
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-z = math.pow(3.2*math.pow(10, -5), 3/2)
+name: Python application
 
-x = float(input('x = '))#ввод значения x
-y = float(input('y = '))
-z = float(input('z = '))
+on:
+  push:
+    branches: [ "python-app" ]
+  pull_request:
+    branches: [ "python-app" ]
 
-a = float(2*math.cos(x-math.pi/6)/(0.5+math.pow(math.sin(y),2)))
-print ('a = %.3f'%a)
-b = float(1+math.pow(z,2)/(3.2*math.pow(10,-5)+math.pow(z,2/3)))
-print ('b = %.3f'%b)
+permissions:
+  contents: read
 
-if math.cos(a*x)>=0:
-    c = float(math.tan(2.5*x))+b*math.pow(math.cos(a*x),1/3)
-    print ('c = %.3f'%c)
-else:
-    print ("Корень из отрицательного числа не вычисляется")
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        pytest
